# template-python

./: .gitignore  README.md  pyproject.toml
projectname/core/: log.py
src/: main.py
src/core/: constants.py  log.py  params.py
test/test_core/: test_params.py
tests/test_core/: test_params.py
